using link lengths and masses from urdf

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -33,11 +33,7 @@
    "source": [
     "init_printing(use_unicode=True)\n",
     "\n",
-    "mechanics_printing(pretty_print=False)\n",
-    "\n",
-    "# Output folder\n",
-    "src_folder = os.path.join('.', 'src')\n",
-    "Path(src_folder).mkdir(exist_ok=True)"
+    "mechanics_printing(pretty_print=False)"
    ]
   },
   {
@@ -56,13 +52,17 @@
    "outputs": [],
    "source": [
     "generate_output_file_for_python = True\n",
+    "generate_output_file_for_cpp = False\n",
     "\n",
     "if generate_output_file_for_python:\n",
-    "    from sympy.printing.numpy import NumPyPrinter\n",
-    "    code_printer = NumPyPrinter\n",
-    "else:\n",
-    "    from sympy.printing.cxx import CXX11CodePrinter\n",
-    "    code_printer = CXX11CodePrinter"
+    "    # Output folder\n",
+    "    src_folder_path_python = os.path.join('.', 'src', 'python')\n",
+    "    Path(src_folder_path_python).mkdir(exist_ok=True)\n",
+    "\n",
+    "if generate_output_file_for_cpp:\n",
+    "    # Output folder\n",
+    "    src_folder_path_cpp = os.path.join('.', 'src', 'cpp')\n",
+    "    Path(src_folder_path_cpp).mkdir(exist_ok=True)"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "id": "37b7df14-a4e4-433f-9c2f-7c8937a3ebae",
    "metadata": {},
    "source": [
-    "Set to True if using Robotiq 2f-85 gripper at the end-effector, False otherwise"
+    "Set to ```True``` if using Robotiq 2f-85 gripper at the end-effector, ```False``` otherwise"
    ]
   },
   {
@@ -261,14 +261,14 @@
    "outputs": [],
    "source": [
     "P0 = Point(\"O\")\n",
-    "P1 = P0.locatenew(\"P1\", 0.1564 * N.z)\n",
-    "P2 = P1.locatenew(\"P2\", 0.0054 * A.y - 0.1284 * A.z)\n",
-    "P3 = P2.locatenew(\"P3\", -0.2104 * B.y - 0.0064 * B.z)\n",
-    "P4 = P3.locatenew(\"P4\", 0.0064 * C.y - 0.2104 * C.z)\n",
-    "P5 = P4.locatenew(\"P5\", -0.2084 * D.y - 0.0064 * D.z)\n",
-    "P6 = P5.locatenew(\"P6\", -0.1059 * E.z)\n",
-    "P7 = P6.locatenew(\"P7\", -0.1059 * F.y)\n",
-    "P8 = P7.locatenew(\"P8\", -0.0615 * G.z)\n",
+    "P1 = P0.locatenew(\"P1\", 0.15643 * N.z)\n",
+    "P2 = P1.locatenew(\"P2\", 0.005375 * A.y - 0.12838 * A.z)\n",
+    "P3 = P2.locatenew(\"P3\", -0.21038 * B.y - 0.006375 * B.z)\n",
+    "P4 = P3.locatenew(\"P4\", 0.006375 * C.y - 0.21038 * C.z)\n",
+    "P5 = P4.locatenew(\"P5\", -0.20843 * D.y - 0.006375 * D.z)\n",
+    "P6 = P5.locatenew(\"P6\", 0.00017505 * E.y - 0.10593 * E.z)\n",
+    "P7 = P6.locatenew(\"P7\", -0.10593 * F.y - 0.00017505 * F.z)\n",
+    "P8 = P7.locatenew(\"P8\", -0.0615250000000001 * G.z)\n",
     "\n",
     "if gripper:\n",
     "    P9 = P8.locatenew(\"P9\", 0.12 * H.z)"
@@ -354,8 +354,9 @@
     }
    ],
    "source": [
-    "forward_kinematics_printer = PythonFunction('forward_kinematics', os.path.join('.', 'src'), ['q'], ['x', 'R'], [x, R])\n",
-    "forward_kinematics_printer.print()"
+    "if generate_output_file_for_python:\n",
+    "    forward_kinematics_printer = PythonFunction('forward_kinematics', src_folder_path_python, ['q'], ['x', 'R'], [x, R])\n",
+    "    forward_kinematics_printer.print()"
    ]
   },
   {
@@ -363,18 +364,11 @@
    "execution_count": 16,
    "id": "9e501c03-3268-48a2-b018-2437044b282c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: forwardKinematics\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "forward_kinematics_printer_cpp = CppFunction('forwardKinematics', os.path.join('.', 'src'), {'q':'Eigen::Vector<double, 7>'}, {'T': 'Eigen::Transform<double, 3, Eigen::Affine>'}, {'x': 'Eigen::Vector<double, 3>', 'R': 'Eigen::Matrix<double, 3, 3>'}, [x, R])\n",
-    "forward_kinematics_printer_cpp.print()"
+    "if generate_output_file_for_cpp:\n",
+    "    forward_kinematics_printer_cpp = CppFunction('forwardKinematics', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'T': 'Eigen::Transform<double, 3, Eigen::Affine>'}, {'x': 'Eigen::Vector<double, 3>', 'R': 'Eigen::Matrix<double, 3, 3>'}, [x, R])\n",
+    "    forward_kinematics_printer_cpp.print()"
    ]
   },
   {
@@ -549,8 +543,9 @@
     }
    ],
    "source": [
-    "jacobian_printer = PythonFunction('jacobian', os.path.join('.', 'src'), ['q'], ['J'], J)\n",
-    "jacobian_printer.print()"
+    "if generate_output_file_for_python:\n",
+    "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J)\n",
+    "    jacobian_printer.print()"
    ]
   },
   {
@@ -560,8 +555,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jacobian_printer_cpp = CppFunction('jacobian', os.path.join('.', 'src'), {'q':'Eigen::Vector<double, 7>'}, {'J': 'Eigen::Matrix<double, 7, 7>'}, J)\n",
-    "# jacobian_printer_cpp.print()"
+    "if generate_output_file_for_cpp:\n",
+    "    jacobian_printer_cpp = CppFunction('jacobian', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'J': 'Eigen::Matrix<double, 7, 7>'}, J)\n",
+    "    jacobian_printer_cpp.print()"
    ]
   },
   {
@@ -596,13 +592,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_A = 1.3770\n",
+    "mass_A = 1.3773\n",
     "mass_B = 1.1636\n",
     "mass_C = 1.1636\n",
-    "mass_D = 0.9300\n",
-    "mass_E = 0.6780\n",
-    "mass_F = 0.6780\n",
-    "mass_G = 0.5000\n",
+    "mass_D = 0.9302\n",
+    "mass_E = 0.6781\n",
+    "mass_F = 0.6781\n",
+    "mass_G = 0.5006\n",
     "\n",
     "if gripper:\n",
     "    mass_H = 0.925"
@@ -766,8 +762,9 @@
     }
    ],
    "source": [
-    "mass_matrix_printer = PythonFunction('mass_matrix', os.path.join('.', 'src'), ['q'], ['M'], [x, R])\n",
-    "mass_matrix_printer.print()"
+    "if generate_output_file_for_python:\n",
+    "    mass_matrix_printer = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], [x, R])\n",
+    "    mass_matrix_printer.print()"
    ]
   },
   {
@@ -780,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "1a39a213-3606-4544-85cd-b2ae4c9da512",
    "metadata": {},
    "outputs": [],
@@ -790,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "57e5585d-bad5-482d-bdfa-b1e5f81f88d8",
    "metadata": {},
    "outputs": [],
@@ -811,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "f240954b-f93f-4f05-8bdf-07b4b55ed031",
    "metadata": {},
    "outputs": [
@@ -824,13 +821,14 @@
     }
    ],
    "source": [
-    "gravity_term_printer = PythonFunction('gravity', os.path.join('.', 'src'), ['q'], ['G'], G)\n",
-    "gravity_term_printer.print()"
+    "if generate_output_file_for_python:\n",
+    "    gravity_term_printer = PythonFunction('gravity', src_folder_path_python, ['q'], ['G'], G)\n",
+    "    gravity_term_printer.print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
    "metadata": {},
    "outputs": [
@@ -843,17 +841,10 @@
     }
    ],
    "source": [
-    "gravity_term_printer = PythonFunction('coriolis', os.path.join('.', 'src'), ['q', 'qp'], ['C'], C)\n",
-    "gravity_term_printer.print()"
+    "if generate_output_file_for_python:\n",
+    "    gravity_term_printer = PythonFunction('coriolis', src_folder_path_python, ['q', 'qp'], ['C'], C)\n",
+    "    gravity_term_printer.print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ae6a86c-9b7a-48e2-af0c-2534ed4424e3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -872,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
