fixed the bug in the mass matrix printing

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -763,7 +763,7 @@
    ],
    "source": [
     "if generate_output_file_for_python:\n",
-    "    mass_matrix_printer = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], [x, R])\n",
+    "    mass_matrix_printer = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], M)\n",
     "    mass_matrix_printer.print()"
    ]
   },
