fixed last link length value

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -268,7 +268,7 @@
     "P5 = P4.locatenew(\"P5\", -0.20843 * D.y - 0.006375 * D.z)\n",
     "P6 = P5.locatenew(\"P6\", 0.00017505 * E.y - 0.10593 * E.z)\n",
     "P7 = P6.locatenew(\"P7\", -0.10593 * F.y - 0.00017505 * F.z)\n",
-    "P8 = P7.locatenew(\"P8\", -0.0615250000000001 * G.z)\n",
+    "P8 = P7.locatenew(\"P8\", -0.0615 * G.z)\n",
     "\n",
     "if gripper:\n",
     "    P9 = P8.locatenew(\"P9\", 0.12 * H.z)"
@@ -863,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
