corrected the last frame rotation

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -215,7 +215,7 @@
     "E = D.orientnew(\"E\", \"Body\", [-pi / 2, 0, q5], \"123\")\n",
     "F = E.orientnew(\"F\", \"Body\", [pi / 2, 0, q6], \"123\")\n",
     "G = F.orientnew(\"G\", \"Body\", [-pi / 2, 0, q7], \"123\")\n",
-    "H = G.orientnew(\"H\", \"Body\", [0, pi, 0], \"123\")"
+    "H = G.orientnew(\"H\", \"Body\", [pi, 0, 0], \"123\")"
    ]
   },
   {
