--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
-    "from sympy import init_printing, Matrix, pi, symbols\n",
+    "from sympy import Matrix, pi, symbols, lambdify\n",
     "from sympy.physics.mechanics import dynamicsymbols, mechanics_printing, Point, ReferenceFrame, \\\n",
     "    RigidBody, inertia, KanesMethod\n",
     "from function import PythonFunction\n",
@@ -31,9 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_printing(use_unicode=True)\n",
-    "\n",
-    "mechanics_printing(pretty_print=False)"
+    "mechanics_printing(pretty_print=True)"
    ]
   },
   {
@@ -188,8 +186,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_dict = dict(zip(q + u, [\"q1\", \"q2\", \"q3\", \"q4\", \"q5\", \"q6\", \"q7\",\n",
-    "                              \"u1\", \"u2\", \"u3\", \"u4\", \"u5\", \"u6\", \"u7\"]))"
+    "dummy_dict = dict(zip(q + qp + u,\n",
+    "                      [\"q1\", \"q2\", \"q3\", \"q4\", \"q5\", \"q6\", \"q7\"] +\n",
+    "                      [\"qp1\", \"qp2\", \"qp3\", \"qp4\", \"qp5\", \"qp6\", \"qp7\"] +\n",
+    "                      [\"u1\", \"u2\", \"u3\", \"u4\", \"u5\", \"u6\", \"u7\"]))"
    ]
   },
   {
@@ -744,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "M = KM.mass_matrix"
+    "M = KM.mass_matrix.subs(dummy_dict)"
    ]
   },
   {
@@ -782,7 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forcing = -KM.forcing"
+    "forcing = -KM.forcing.subs(dummy_dict)"
    ]
   },
   {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
    ],
    "source": [
     "if generate_output_file_for_python:\n",
-    "    gravity_term_printer = PythonFunction('coriolis', src_folder_path_python, ['q', 'qp'], ['C'], C)\n",
+    "    gravity_term_printer = PythonFunction('coriolis', src_folder_path_python, ['q', 'u'], ['C'], C)\n",
     "    gravity_term_printer.print()"
    ]
   }
