--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "107504fe-1f18-4479-a9b4-6d0e6c7a9557",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,13 @@
     "from sympy.physics.mechanics import dynamicsymbols, mechanics_printing, Point, ReferenceFrame, \\\n",
     "    RigidBody, inertia, KanesMethod\n",
     "from function import PythonFunction\n",
-    "from function import CppFunction"
+    "from function import CppFunction\n",
+    "from function import JuliaFunction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "f7f5c3f8-bca4-45ad-a528-605d9b753082",
    "metadata": {},
    "outputs": [],
@@ -46,13 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "6ccf449a-af54-4582-81d3-14cc36f548d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_output_file_for_python = True\n",
+    "generate_output_file_for_python = False\n",
     "generate_output_file_for_cpp = False\n",
+    "generate_output_file_for_julia = True\n",
     "\n",
     "if generate_output_file_for_python:\n",
     "    # Output folder\n",
@@ -62,7 +64,12 @@
     "if generate_output_file_for_cpp:\n",
     "    # Output folder\n",
     "    src_folder_path_cpp = os.path.join('.', 'src', 'cpp')\n",
-    "    Path(src_folder_path_cpp).mkdir(exist_ok=True)"
+    "    Path(src_folder_path_cpp).mkdir(exist_ok=True)\n",
+    "\n",
+    "if generate_output_file_for_julia:\n",
+    "    # Output folder\n",
+    "    src_folder_path_julia = os.path.join('.', 'src', 'julia')\n",
+    "    Path(src_folder_path_julia).mkdir(exist_ok=True)"
    ]
   },
   {
@@ -75,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "aa1ec8f1-761d-4abe-9fe0-277d977d5cbb",
    "metadata": {},
    "outputs": [],
@@ -93,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "89347395-c4a2-4a76-ab8f-eb48970e590b",
    "metadata": {},
    "outputs": [],
@@ -106,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "0734821a-25c2-413e-9b26-1ad2e5bf6495",
    "metadata": {},
    "outputs": [],
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "eff2a212-22eb-4dbf-bc9f-498bfc377394",
    "metadata": {},
    "outputs": [],
@@ -145,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "5b1aa9e1-a813-4867-a2a9-3f3f9a40fd85",
    "metadata": {},
    "outputs": [],
@@ -165,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "36ee69d2-f827-4394-8fbd-2b863cc52496",
    "metadata": {},
    "outputs": [],
@@ -183,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "id": "1a3c19dc-2ca9-4e02-8f89-419259b12fa4",
    "metadata": {},
    "outputs": [],
@@ -202,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "2986dfd3-1900-41e1-a3ca-5e18b2ae4e1f",
    "metadata": {},
    "outputs": [],
@@ -255,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "6266f0de-97a5-48ff-9d9a-0862d7806c23",
    "metadata": {},
    "outputs": [],
@@ -293,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "b919fa70-21c1-497a-b013-d9c289d4f4ae",
    "metadata": {},
    "outputs": [],
@@ -320,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "2c378ee5-0f10-4336-a05a-104abb192cc8",
    "metadata": {},
    "outputs": [],
@@ -341,8 +348,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "6edcc76e-c843-4d2b-9413-a137eac81412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_python:\n",
+    "    forward_kinematics_printer = PythonFunction('forward_kinematics', src_folder_path_python, ['q'], ['x', 'R'], [x, R])\n",
+    "    forward_kinematics_printer.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9e501c03-3268-48a2-b018-2437044b282c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_cpp:\n",
+    "    forward_kinematics_printer_cpp = CppFunction('forwardKinematics', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'T': 'Eigen::Transform<double, 3, Eigen::Affine>'}, {'x': 'Eigen::Vector<double, 3>', 'R': 'Eigen::Matrix<double, 3, 3>'}, [x, R])\n",
+    "    forward_kinematics_printer_cpp.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e6210302",
    "metadata": {},
    "outputs": [
     {
@@ -354,21 +385,9 @@
     }
    ],
    "source": [
-    "if generate_output_file_for_python:\n",
-    "    forward_kinematics_printer = PythonFunction('forward_kinematics', src_folder_path_python, ['q'], ['x', 'R'], [x, R])\n",
-    "    forward_kinematics_printer.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9e501c03-3268-48a2-b018-2437044b282c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_cpp:\n",
-    "    forward_kinematics_printer_cpp = CppFunction('forwardKinematics', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'T': 'Eigen::Transform<double, 3, Eigen::Affine>'}, {'x': 'Eigen::Vector<double, 3>', 'R': 'Eigen::Matrix<double, 3, 3>'}, [x, R])\n",
-    "    forward_kinematics_printer_cpp.print()"
+    "if generate_output_file_for_julia:\n",
+    "    forward_kinematics_printer_julia = JuliaFunction('forward_kinematics', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'x': 'SVector{3, Float64}', 'R': 'SMatrix{3, 3, Float64}'}, [x, R])\n",
+    "    forward_kinematics_printer_julia.print()"
    ]
   },
   {
@@ -389,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "3e49a76a-62d8-46f8-9c18-c720a42848ac",
    "metadata": {},
    "outputs": [],
@@ -429,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "c0dba4ad-cab7-4c87-b6aa-94f0b994e9a4",
    "metadata": {},
    "outputs": [],
@@ -447,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "id": "3f3a2e54-a9de-4d90-ac98-4b18ddb12a67",
    "metadata": {},
    "outputs": [],
@@ -472,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "7ad71e14-32ff-41a9-a953-7d59a9cb1044",
    "metadata": {},
    "outputs": [],
@@ -520,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "cbe85c26-de39-4cdb-8e94-4b2f54bfceee",
    "metadata": {},
    "outputs": [],
@@ -530,8 +549,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "e0521eaf-8938-4bf8-bc9f-e69009e4c7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_python:\n",
+    "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J)\n",
+    "    jacobian_printer.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b9a1932a-0a89-4fd2-a23a-e9115755d007",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_cpp:\n",
+    "    jacobian_printer_cpp = CppFunction('jacobian', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'J': 'Eigen::Matrix<double, 7, 7>'}, J)\n",
+    "    jacobian_printer_cpp.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "bc8def17",
    "metadata": {},
    "outputs": [
     {
@@ -543,21 +586,9 @@
     }
    ],
    "source": [
-    "if generate_output_file_for_python:\n",
-    "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J)\n",
-    "    jacobian_printer.print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "b9a1932a-0a89-4fd2-a23a-e9115755d007",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if generate_output_file_for_cpp:\n",
-    "    jacobian_printer_cpp = CppFunction('jacobian', src_folder_path_cpp, {'q':'Eigen::Vector<double, 7>'}, {'J': 'Eigen::Matrix<double, 7, 7>'}, J)\n",
-    "    jacobian_printer_cpp.print()"
+    "if generate_output_file_for_julia:\n",
+    "    jacobian_printer_julia = JuliaFunction('jacobian', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'J': 'SMatrix{7, 7, Float64}>'}, J)\n",
+    "    jacobian_printer_julia.print()"
    ]
   },
   {
@@ -587,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "273f2b2a-29ff-49be-aa28-efc84f01d511",
    "metadata": {},
    "outputs": [],
@@ -614,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f50be1d1-ef1b-4798-a5ef-be00d48b2331",
    "metadata": {},
    "outputs": [],
@@ -642,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "fdf7661c-23a5-467b-be7e-c250fd153beb",
    "metadata": {},
    "outputs": [],
@@ -671,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "9f63c702-cc9e-46f2-8935-c6a33448c281",
    "metadata": {},
    "outputs": [],
@@ -719,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "31fe8ba6-e94b-4ed7-bb24-c1aa72d86f18",
    "metadata": {},
    "outputs": [],
@@ -739,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "94f2c438-77cd-42bf-894d-8525a522e8be",
    "metadata": {},
    "outputs": [],
@@ -749,22 +780,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "ef7cb12a-25bc-4bf9-aa01-d036f7d04bc3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: mass_matrix\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_python:\n",
-    "    mass_matrix_printer = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], M)\n",
-    "    mass_matrix_printer.print()"
+    "    mass_matrix_printer_py = PythonFunction('mass_matrix', src_folder_path_python, ['q'], ['M'], M)\n",
+    "    mass_matrix_printer_py.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2473473b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_julia:\n",
+    "    mass_matrix_printer_julia = PythonFunction('mass_matrix', src_folder_path_julia, ['q'], ['M'], M)\n",
+    "    mass_matrix_printer_julia.print()"
    ]
   },
   {
@@ -777,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "1a39a213-3606-4544-85cd-b2ae4c9da512",
    "metadata": {},
    "outputs": [],
@@ -787,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "57e5585d-bad5-482d-bdfa-b1e5f81f88d8",
    "metadata": {},
    "outputs": [],
@@ -808,18 +843,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "f240954b-f93f-4f05-8bdf-07b4b55ed031",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: gravity\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_python:\n",
     "    gravity_term_printer = PythonFunction('gravity', src_folder_path_python, ['q'], ['G'], G)\n",
@@ -828,22 +855,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "id": "06d79bda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_julia:\n",
+    "    gravity_term_printer_julia = JuliaFunction('gravity', src_folder_path_julia, ['q'], ['G'], G)\n",
+    "    gravity_term_printer_julia.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: coriolis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_python:\n",
     "    gravity_term_printer = PythonFunction('coriolis', src_folder_path_python, ['q', 'qp'], ['C'], C)\n",
     "    gravity_term_printer.print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a454c54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if generate_output_file_for_julia:\n",
+    "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_python, ['q', 'qp'], ['C'], C)\n",
+    "    gravity_term_printer_julia.print()"
    ]
   }
  ],
