--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "107504fe-1f18-4479-a9b4-6d0e6c7a9557",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "f7f5c3f8-bca4-45ad-a528-605d9b753082",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "6ccf449a-af54-4582-81d3-14cc36f548d5",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "aa1ec8f1-761d-4abe-9fe0-277d977d5cbb",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "89347395-c4a2-4a76-ab8f-eb48970e590b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "0734821a-25c2-413e-9b26-1ad2e5bf6495",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "eff2a212-22eb-4dbf-bc9f-498bfc377394",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "5b1aa9e1-a813-4867-a2a9-3f3f9a40fd85",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "36ee69d2-f827-4394-8fbd-2b863cc52496",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "1a3c19dc-2ca9-4e02-8f89-419259b12fa4",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "2986dfd3-1900-41e1-a3ca-5e18b2ae4e1f",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "6266f0de-97a5-48ff-9d9a-0862d7806c23",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "b919fa70-21c1-497a-b013-d9c289d4f4ae",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "2c378ee5-0f10-4336-a05a-104abb192cc8",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "6edcc76e-c843-4d2b-9413-a137eac81412",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "9e501c03-3268-48a2-b018-2437044b282c",
    "metadata": {},
    "outputs": [],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "e6210302",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "3e49a76a-62d8-46f8-9c18-c720a42848ac",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "c0dba4ad-cab7-4c87-b6aa-94f0b994e9a4",
    "metadata": {},
    "outputs": [],
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "3f3a2e54-a9de-4d90-ac98-4b18ddb12a67",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "7ad71e14-32ff-41a9-a953-7d59a9cb1044",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "id": "cbe85c26-de39-4cdb-8e94-4b2f54bfceee",
    "metadata": {},
    "outputs": [],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "e0521eaf-8938-4bf8-bc9f-e69009e4c7ed",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "id": "b9a1932a-0a89-4fd2-a23a-e9115755d007",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "id": "bc8def17",
    "metadata": {},
    "outputs": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "273f2b2a-29ff-49be-aa28-efc84f01d511",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f50be1d1-ef1b-4798-a5ef-be00d48b2331",
    "metadata": {},
    "outputs": [],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "fdf7661c-23a5-467b-be7e-c250fd153beb",
    "metadata": {},
    "outputs": [],
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9f63c702-cc9e-46f2-8935-c6a33448c281",
    "metadata": {},
    "outputs": [],
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "31fe8ba6-e94b-4ed7-bb24-c1aa72d86f18",
    "metadata": {},
    "outputs": [],
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "94f2c438-77cd-42bf-894d-8525a522e8be",
    "metadata": {},
    "outputs": [],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ef7cb12a-25bc-4bf9-aa01-d036f7d04bc3",
    "metadata": {},
    "outputs": [],
@@ -792,10 +792,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "2473473b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: mass_matrix\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    mass_matrix_printer_julia = PythonFunction('mass_matrix', src_folder_path_julia, ['q'], ['M'], M)\n",
@@ -812,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "1a39a213-3606-4544-85cd-b2ae4c9da512",
    "metadata": {},
    "outputs": [],
@@ -822,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "57e5585d-bad5-482d-bdfa-b1e5f81f88d8",
    "metadata": {},
    "outputs": [],
@@ -843,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "f240954b-f93f-4f05-8bdf-07b4b55ed031",
    "metadata": {},
    "outputs": [],
@@ -855,19 +863,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "06d79bda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: gravity\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
-    "    gravity_term_printer_julia = JuliaFunction('gravity', src_folder_path_julia, ['q'], ['G'], G)\n",
+    "    gravity_term_printer_julia = JuliaFunction('gravity', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'G':'SVector{7, Float64}'}, G)\n",
     "    gravity_term_printer_julia.print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
    "metadata": {},
    "outputs": [],
@@ -879,15 +895,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "3a454c54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: coriolis\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_julia:\n",
-    "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_python, ['q', 'qp'], ['C'], C)\n",
+    "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_julia, {'q':'SVector{7, Float64}', 'qp':'SVector{7, Float64}'}, {'C':'SVector{7, Float64}'}, C)\n",
     "    gravity_term_printer_julia.print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cacb1e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
