fixed julia mass_matrix printing

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -806,7 +806,7 @@
    ],
    "source": [
     "if generate_output_file_for_julia:\n",
-    "    mass_matrix_printer_julia = PythonFunction('mass_matrix', src_folder_path_julia, ['q'], ['M'], M)\n",
+    "    mass_matrix_printer_julia = JuliaFunction('mass_matrix', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'M':'SMatrix{7, 7, Float64}'}, M)\n",
     "    mass_matrix_printer_julia.print()"
    ]
   },
@@ -895,13 +895,8 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 35,
-   "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
-=======
-   "execution_count": 41,
-   "id": "3a454c54",
->>>>>>> julia
+   "execution_count": 39,
+   "id": "cacb1e7f",
    "metadata": {},
    "outputs": [
     {
@@ -913,24 +908,10 @@
     }
    ],
    "source": [
-<<<<<<< HEAD
-    "if generate_output_file_for_python:\n",
-    "    gravity_term_printer = PythonFunction('coriolis', src_folder_path_python, ['q', 'u'], ['C'], C)\n",
-    "    gravity_term_printer.print()"
-=======
     "if generate_output_file_for_julia:\n",
     "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_julia, {'q':'SVector{7, Float64}', 'qp':'SVector{7, Float64}'}, {'C':'SVector{7, Float64}'}, C)\n",
     "    gravity_term_printer_julia.print()"
->>>>>>> julia
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cacb1e7f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -949,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
