--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
-    "from sympy import Matrix, pi, symbols, lambdify\n",
+    "from sympy import Matrix, pi, symbols\n",
     "from sympy.physics.mechanics import dynamicsymbols, mechanics_printing, Point, ReferenceFrame, \\\n",
     "    RigidBody, inertia, KanesMethod\n",
     "from function import PythonFunction\n",
@@ -930,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
