bug fix: create src folder

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -45,14 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6ccf449a-af54-4582-81d3-14cc36f548d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_output_file_for_python = False\n",
+    "generate_output_file_for_python = True\n",
     "generate_output_file_for_cpp = False\n",
-    "generate_output_file_for_julia = True\n",
+    "generate_output_file_for_julia = False\n",
+    "\n",
+    "Path(os.path.join('.', 'src')).mkdir(exist_ok=True)\n",
     "\n",
     "if generate_output_file_for_python:\n",
     "    # Output folder\n",
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "aa1ec8f1-761d-4abe-9fe0-277d977d5cbb",
    "metadata": {},
    "outputs": [],
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "89347395-c4a2-4a76-ab8f-eb48970e590b",
    "metadata": {},
    "outputs": [],
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0734821a-25c2-413e-9b26-1ad2e5bf6495",
    "metadata": {},
    "outputs": [],
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "eff2a212-22eb-4dbf-bc9f-498bfc377394",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5b1aa9e1-a813-4867-a2a9-3f3f9a40fd85",
    "metadata": {},
    "outputs": [],
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "36ee69d2-f827-4394-8fbd-2b863cc52496",
    "metadata": {},
    "outputs": [],
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1a3c19dc-2ca9-4e02-8f89-419259b12fa4",
    "metadata": {},
    "outputs": [],
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2986dfd3-1900-41e1-a3ca-5e18b2ae4e1f",
    "metadata": {},
    "outputs": [],
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6266f0de-97a5-48ff-9d9a-0862d7806c23",
    "metadata": {},
    "outputs": [],
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b919fa70-21c1-497a-b013-d9c289d4f4ae",
    "metadata": {},
    "outputs": [],
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2c378ee5-0f10-4336-a05a-104abb192cc8",
    "metadata": {},
    "outputs": [],
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6edcc76e-c843-4d2b-9413-a137eac81412",
    "metadata": {},
    "outputs": [],
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9e501c03-3268-48a2-b018-2437044b282c",
    "metadata": {},
    "outputs": [],
@@ -372,18 +374,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e6210302",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: forward_kinematics\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    forward_kinematics_printer_julia = JuliaFunction('forward_kinematics', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'x': 'SVector{3, Float64}', 'R': 'SMatrix{3, 3, Float64}'}, [x, R])\n",
@@ -408,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3e49a76a-62d8-46f8-9c18-c720a42848ac",
    "metadata": {},
    "outputs": [],
@@ -448,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c0dba4ad-cab7-4c87-b6aa-94f0b994e9a4",
    "metadata": {},
    "outputs": [],
@@ -466,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "3f3a2e54-a9de-4d90-ac98-4b18ddb12a67",
    "metadata": {},
    "outputs": [],
@@ -491,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "7ad71e14-32ff-41a9-a953-7d59a9cb1044",
    "metadata": {},
    "outputs": [],
@@ -539,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "cbe85c26-de39-4cdb-8e94-4b2f54bfceee",
    "metadata": {},
    "outputs": [],
@@ -549,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e0521eaf-8938-4bf8-bc9f-e69009e4c7ed",
    "metadata": {},
    "outputs": [],
@@ -561,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "b9a1932a-0a89-4fd2-a23a-e9115755d007",
    "metadata": {},
    "outputs": [],
@@ -573,18 +567,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "bc8def17",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: jacobian\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    jacobian_printer_julia = JuliaFunction('jacobian', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'J': 'SMatrix{7, 7, Float64}>'}, J)\n",
@@ -618,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "273f2b2a-29ff-49be-aa28-efc84f01d511",
    "metadata": {},
    "outputs": [],
@@ -645,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "f50be1d1-ef1b-4798-a5ef-be00d48b2331",
    "metadata": {},
    "outputs": [],
@@ -673,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fdf7661c-23a5-467b-be7e-c250fd153beb",
    "metadata": {},
    "outputs": [],
@@ -702,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "9f63c702-cc9e-46f2-8935-c6a33448c281",
    "metadata": {},
    "outputs": [],
@@ -750,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "31fe8ba6-e94b-4ed7-bb24-c1aa72d86f18",
    "metadata": {},
    "outputs": [],
@@ -770,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "94f2c438-77cd-42bf-894d-8525a522e8be",
    "metadata": {},
    "outputs": [],
@@ -780,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ef7cb12a-25bc-4bf9-aa01-d036f7d04bc3",
    "metadata": {},
    "outputs": [],
@@ -792,18 +778,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "2473473b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: mass_matrix\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    mass_matrix_printer_julia = JuliaFunction('mass_matrix', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'M':'SMatrix{7, 7, Float64}'}, M)\n",
@@ -820,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "1a39a213-3606-4544-85cd-b2ae4c9da512",
    "metadata": {},
    "outputs": [],
@@ -830,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "57e5585d-bad5-482d-bdfa-b1e5f81f88d8",
    "metadata": {},
    "outputs": [],
@@ -851,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "f240954b-f93f-4f05-8bdf-07b4b55ed031",
    "metadata": {},
    "outputs": [],
@@ -863,18 +841,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "06d79bda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: gravity\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    gravity_term_printer_julia = JuliaFunction('gravity', src_folder_path_julia, {'q':'SVector{7, Float64}'}, {'G':'SVector{7, Float64}'}, G)\n",
@@ -883,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "f629c96f-7814-423b-ab1d-90840bb14d16",
    "metadata": {},
    "outputs": [],
@@ -895,18 +865,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "cacb1e7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Printing the function: coriolis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if generate_output_file_for_julia:\n",
     "    gravity_term_printer_julia = JuliaFunction('coriolis', src_folder_path_julia, {'q':'SVector{7, Float64}', 'qp':'SVector{7, Float64}'}, {'C':'SVector{7, Float64}'}, C)\n",
@@ -930,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
