added jacobian time derivative

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
-    "from sympy import Matrix, pi, symbols\n",
+    "from sympy import diff, Matrix, pi, symbols, Symbol\n",
     "from sympy.physics.mechanics import dynamicsymbols, mechanics_printing, Point, ReferenceFrame, \\\n",
     "    RigidBody, inertia, KanesMethod\n",
     "from function import PythonFunction\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6ccf449a-af54-4582-81d3-14cc36f548d5",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aa1ec8f1-761d-4abe-9fe0-277d977d5cbb",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "89347395-c4a2-4a76-ab8f-eb48970e590b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0734821a-25c2-413e-9b26-1ad2e5bf6495",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "eff2a212-22eb-4dbf-bc9f-498bfc377394",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5b1aa9e1-a813-4867-a2a9-3f3f9a40fd85",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "36ee69d2-f827-4394-8fbd-2b863cc52496",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1a3c19dc-2ca9-4e02-8f89-419259b12fa4",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2986dfd3-1900-41e1-a3ca-5e18b2ae4e1f",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "6266f0de-97a5-48ff-9d9a-0862d7806c23",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b919fa70-21c1-497a-b013-d9c289d4f4ae",
    "metadata": {},
    "outputs": [],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2c378ee5-0f10-4336-a05a-104abb192cc8",
    "metadata": {},
    "outputs": [],
@@ -350,10 +350,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6edcc76e-c843-4d2b-9413-a137eac81412",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: forward_kinematics\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_python:\n",
     "    forward_kinematics_printer = PythonFunction('forward_kinematics', src_folder_path_python, ['q'], ['x', 'R'], [x, R])\n",
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9e501c03-3268-48a2-b018-2437044b282c",
    "metadata": {},
    "outputs": [],
@@ -374,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e6210302",
    "metadata": {},
    "outputs": [],
@@ -402,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3e49a76a-62d8-46f8-9c18-c720a42848ac",
    "metadata": {},
    "outputs": [],
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c0dba4ad-cab7-4c87-b6aa-94f0b994e9a4",
    "metadata": {},
    "outputs": [],
@@ -455,24 +463,76 @@
    "id": "98c4018d-82fd-47e7-b7ba-c9f3ea38fe5f",
    "metadata": {},
    "source": [
-    "Calculate the translational part of the Jacobian."
+    "Calculate the translational and the rotational part of the Jacobian."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3f3a2e54-a9de-4d90-ac98-4b18ddb12a67",
+   "execution_count": 20,
+   "id": "a5999193",
    "metadata": {},
    "outputs": [],
    "source": [
     "Jt = Matrix([P9.pos_from(P0).dot(N.x),\n",
     "             P9.pos_from(P0).dot(N.y),\n",
     "             P9.pos_from(P0).dot(N.z)])\\\n",
-    "        .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7])).subs(dummy_dict) if gripper \\\n",
+    "        .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7])) if gripper \\\n",
     "        else Matrix([P8.pos_from(P0).dot(N.x),\n",
     "                     P8.pos_from(P0).dot(N.y),\n",
     "                     P8.pos_from(P0).dot(N.z)])\\\n",
-    "        .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7])).subs(dummy_dict)"
+    "        .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7]))\n",
+    "\n",
+    "Jr = Matrix(\n",
+    "            [\n",
+    "                [\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q1p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q2p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q3p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q4p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q5p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q6p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q7p).trigsimp(),\n",
+    "                ],\n",
+    "                [\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q1p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q2p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q3p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q4p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q5p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q6p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q7p).trigsimp(),\n",
+    "                ],\n",
+    "                [\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q1p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q2p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q3p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q4p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q5p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q6p).trigsimp(),\n",
+    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q7p).trigsimp(),\n",
+    "                ],\n",
+    "            ]\n",
+    "           )\n",
+    "\n",
+    "J = Jt.col_join(Jr)\n",
+    "J_dot = J.diff()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3f3a2e54-a9de-4d90-ac98-4b18ddb12a67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jt = Matrix([P9.pos_from(P0).dot(N.x),\n",
+    "#              P9.pos_from(P0).dot(N.y),\n",
+    "#              P9.pos_from(P0).dot(N.z)])\\\n",
+    "#         .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7])).subs(dummy_dict) if gripper \\\n",
+    "#         else Matrix([P8.pos_from(P0).dot(N.x),\n",
+    "#                      P8.pos_from(P0).dot(N.y),\n",
+    "#                      P8.pos_from(P0).dot(N.z)])\\\n",
+    "#         .jacobian(Matrix([q1, q2, q3, q4, q5, q6, q7])).subs(dummy_dict)"
    ]
   },
   {
@@ -485,42 +545,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7ad71e14-32ff-41a9-a953-7d59a9cb1044",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Jr = Matrix(\n",
-    "            [\n",
-    "                [\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[0].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
-    "                ],\n",
-    "                [\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[1].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
-    "                ],\n",
-    "                [\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
-    "                    H.ang_vel_in(N).to_matrix(N)[2].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
-    "                ],\n",
-    "            ]\n",
-    "           )"
+    "# Jr = Matrix(\n",
+    "#             [\n",
+    "#                 [\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[0].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
+    "#                 ],\n",
+    "#                 [\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[1].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
+    "#                 ],\n",
+    "#                 [\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q1p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q2p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q3p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q4p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q5p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q6p).subs(dummy_dict).trigsimp(),\n",
+    "#                     H.ang_vel_in(N).to_matrix(N)[2].coeff(q7p).subs(dummy_dict).trigsimp(),\n",
+    "#                 ],\n",
+    "#             ]\n",
+    "#            )"
    ]
   },
   {
@@ -533,24 +593,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "cbe85c26-de39-4cdb-8e94-4b2f54bfceee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "J = Jt.col_join(Jr)"
+    "J_subs = J.subs(dummy_dict)\n",
+    "J_subs_dot = J_dot.subs(dummy_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "e0521eaf-8938-4bf8-bc9f-e69009e4c7ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing the function: jacobian\n",
+      "Printing the function: jacobian_dot\n"
+     ]
+    }
+   ],
    "source": [
     "if generate_output_file_for_python:\n",
-    "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J)\n",
-    "    jacobian_printer.print()"
+    "    jacobian_printer = PythonFunction('jacobian', src_folder_path_python, ['q'], ['J'], J_subs)\n",
+    "    jacobian_dot_printer = PythonFunction('jacobian_dot', src_folder_path_python, ['q', 'qp'], ['Jdot'], J_subs_dot)\n",
+    "    jacobian_printer.print()\n",
+    "    jacobian_dot_printer.print()"
    ]
   },
   {
